1.4.0 (unreleased)
------------------
 - Hardcode the xml prefix to the xml namespace as defined in the specs (#367)
 - Fix parsing of unbound sequences within xsd choices (#380)


1.3.0 (2017-03-14)
------------------
 - Add support for nested xsd:choice elements (#370)
 - Fix unresolved elements for xsd:extension, this was a regression introduced
   in 1.2.0 (#377)


1.2.0 (2017-03-12)
------------------
 - Add flag to disable strict mode in the Client. This allows zeep to better
   work with non standard compliant SOAP Servers. See the documentation for
   usage and potential downsides.
 - Minor refactor of resolving of elements for improved performance
 - Support the SOAP 1.2 'http://www.w3.org/2003/05/soap/bindings/HTTP/' 
   transport uri (#355)
 - Fallback to matching wsdl lookups to matching when the target namespace is
   empty (#356)
 - Improve the handling of xsd:includes, the default namespace of the parent
   schema is now also used during resolving of the included schema. (#360)
 - Properly propagate the global flag for complex types when an xsd:restriction
   is used (#360)
 - Filter out duplicate types and elements when dump the wsdl schema (#360)
 - Add ``zeep.CachingClient()`` which enables the SqliteCache by default


1.1.0 (2017-02-18)
------------------
 - Fix an attribute error when an complexType used xsd:anyType as base 
   restriction (#352)
 - Update asyncio transport to return requests.Response objects (#335)

 
1.0.0 (2017-01-31)
------------------
 - Use cgi.parse_header() to extract media_type for multipart/related checks 
   (#327)
 - Don't ignore nil elements, instead return None when parsing xml (#328)
 - Fix regression when using WSA with an older lxml version (#197)


0.27.0 (2017-01-28)
-------------------
 - Add support for SOAP attachments (multipart responses). (Dave Wapstra, #302)
 - Update xsd:anyType to return the xml elements when no type is given via the
   xsi:type attribute (#284)