@@ -2,6 +2,7 @@
 ------------------
  - Hardcode the xml prefix to the xml namespace as defined in the specs (#367)
  - Fix parsing of unbound sequences within xsd choices (#380)
+ - Use logger.debug() for debug related logging (#369)
 
 
 1.3.0 (2017-03-14)
